stderr
JudgeMan.java:13: error: variable aa is already defined in method judge(String[])
        String[] aa = {"H2", "H9", "H4", "H8", "H6"};
                 ^
1 error
